Bug 426815 - Crash when check-in last loaned item
Summary: Crash when check-in last loaned item
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: HEAD
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-21 14:23 UTC by Simon Fernandez
Modified: 2020-09-23 01:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.3.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Fernandez 2020-09-21 14:23:21 UTC
SUMMARY
When an item is loaned, we can check it back in from the left group panel. When checking-in the last item of a given user, tellico crashes. It only crashes when the borrower has no more items checked-out

STEPS TO REPRODUCE
1. Check-out an item to someone
2. Check-in the item 
3. Crash

OBSERVED RESULT
Crash with error log :

ASSERT failure in QList<T>::at: "index out of range", file /usr/include/qt/QtCore/qlist.h, line 571


EXPECTED RESULT
Not crashing

SOFTWARE/OS VERSIONS
Archlinux with kernel 5.8.8 & Ubuntu 20.04


ADDITIONAL INFORMATION
Comment 1 Robby Stephenson 2020-09-23 01:05:07 UTC
Git commit 3c63654c19d6a9b8947ffc306643725766dc4a1f by Robby Stephenson.
Committed on 23/09/2020 at 01:04.
Pushed by rstephenson into branch '3.3'.

Fix crashing bug when checking in a loan
FIXED-IN: 3.3.4

M  +4    -0    ChangeLog
M  +2    -1    src/models/borrowermodel.cpp

https://invent.kde.org/office/tellico/commit/3c63654c19d6a9b8947ffc306643725766dc4a1f
Comment 2 Robby Stephenson 2020-09-23 01:09:40 UTC
Git commit 4e120e629bbe62c7c1cd382e9e5b7a4e52d304df by Robby Stephenson.
Committed on 23/09/2020 at 01:02.
Pushed by rstephenson into branch 'master'.

Fix crashing bug when checking in a loan
FIXED-IN: 3.3.4

M  +4    -0    ChangeLog
M  +2    -1    src/models/borrowermodel.cpp

https://invent.kde.org/office/tellico/commit/4e120e629bbe62c7c1cd382e9e5b7a4e52d304df