Fix crashing bug when checking in a loan

BUG: 426815
FIXED-IN: 3.3.4